--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key=!!!GOOGLE_API_KEY!!!&language=en&libraries=drawing,places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=!!!GOOGLE_API_KEY!!!&language=en&libraries=drawing,places"></script> -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
